Prevent iframe overflow

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -11,7 +11,6 @@
   margin: 2em 0 0
 
 .home__air
-  width: 100%
   overflow: hidden
 
 .home__air__iframe
@@ -20,9 +19,9 @@
   padding: 0px
   overflow: hidden
   display: block
-  width: calc(105% + 18px)
+  width: calc(100% + 20px)
   min-height: 220px
-  margin: 0 0 0 -18px
+  margin: 0 0 0 -10px
   opacity: 0
 
 .home__air__iframe--loaded
